[package]
name = "adventofcode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"

[[bin]]
name="day1star1"
path="src/day1star1/main.rs"


[[bin]]
name="day1star2"
path="src/day1star2/main.rs"

[[bin]]
name="day2star1"
path="src/day2star1/main.rs"

[[bin]]
name="day2star2"
path="src/day2star2/main.rs"

[[bin]]
name="day3star1"
path="src/day3star1/main.rs"

[[bin]]
name="day3star2"
path="src/day3star2/main.rs"

[[bin]]
name="day4star1"
path="src/day4star1/main.rs"

[[bin]]
name="day4star2"
path="src/day4star2/main.rs"

[[bin]]
name="day5star1"
path="src/day5star1/main.rs"

[[bin]]
name="day5star2"
path="src/day5star2/main.rs"